RESOLVED FIXED129537
[iOS] Assertions and bad behavior when zooming into an iframe containing apple.com
https://bugs.webkit.org/show_bug.cgi?id=129537
Summary [iOS] Assertions and bad behavior when zooming into an iframe containing appl...
Simon Fraser (smfr)
Reported 2014-02-28 21:19:41 PST
Assertions and bad behavior when zooming into an iframe containing apple.com
Attachments
Patch (5.76 KB, patch)
2014-02-28 21:23 PST, Simon Fraser (smfr)
benjamin: review+
Simon Fraser (smfr)
Comment 1 2014-02-28 21:23:32 PST
Simon Fraser (smfr)
Comment 2 2014-02-28 21:30:40 PST
Benjamin Poulain
Comment 3 2014-03-01 15:23:34 PST
I still get assertions in the simulator. I have not tried on device since your fix.
Simon Fraser (smfr)
Comment 4 2014-03-02 09:52:13 PST
What assertions?
Simon Fraser (smfr)
Comment 5 2014-03-02 21:43:18 PST
(In reply to comment #4) > What assertions? Ah, the original ones this bug was filed about. I filed another bug :\
Note You need to log in before you can comment on or make changes to this bug.