Source/WebKit2/Shared/mac/RemoteLayerTreeTransaction.mm
@@ -41,6 +41,9 @@ using namespace WebCore;
 namespace WebKit {
 
 RemoteLayerTreeTransaction::LayerCreationProperties::LayerCreationProperties()
+    : layerID(0)
+    , type(PlatformCALayer::LayerTypeLayer)
+    , hostingContextID(0)
 {
 }
 
